--- a/src/app/components/cotacao/cotacao.component.html
+++ b/src/app/components/cotacao/cotacao.component.html
@@ -1,114 +1,166 @@
-<div class="flex-container">
+<div class="flex-container" style="width: 100%">
 
-  <mat-card>
-    <mat-card-title>Cotacao</mat-card-title>
-    <mat-card-content>
+  <div>
+    <mat-card>
 
-      <div style="margin-top: 40px; margin-bottom: 20px">
+      <mat-card-title>Cotacao</mat-card-title>
+      <mat-card-content>
+
+        <div style="margin-top: 40px; margin-bottom: 20px">
         <span>
-          <mat-radio-group (ngModelChange)="consultaCotacaoCategoria($event)" [(ngModel)]="cotacao.categoria">
+          <mat-radio-group (ngModelChange)="consultaCotacaoCategoria($event)" [(ngModel)]="filtroCotacao.categoria">
             <mat-radio-button style="padding-right: 15px" *ngFor="let categoria of todasCategorias" [value]="categoria">
               {{categoria}}
             </mat-radio-button>
           </mat-radio-group>
         </span>
 
-        <span style="float: right;">
-          <mat-slide-toggle [(ngModel)]="cotacao.coparticipacao" labelPosition="before">Coparticipacao</mat-slide-toggle>
+          <span style="float: right;">
+          <mat-slide-toggle (ngModelChange)="consultaCotacaoCoparticipacao($event)" [(ngModel)]="filtroCotacao.coparticipacao" labelPosition="before">Coparticipacao</mat-slide-toggle>
         </span>
-      </div>
+        </div>
 
-      <mat-form-field appearance="outline" style="width: 100%">
-        <mat-label>Estado</mat-label>
-        <input matInput [formControl]="estadoAutoCompleteControl" [matAutocomplete]="auto1" type="text">
-        <mat-autocomplete autoActiveFirstOption #auto1="matAutocomplete" [displayWith]="estadoDisplayFn">
-          <mat-option *ngFor="let estado of estadoFilteredOptions | async" [value]="estado">
-            {{estado.nome}}
-          </mat-option>
-        </mat-autocomplete>
-      </mat-form-field>
-
-      <mat-form-field appearance="outline" style="width: 100%">
-        <mat-label>Profissao</mat-label>
-        <input matInput [formControl]="profissaoAutoCompleteControl" [matAutocomplete]="auto2" type="text">
-        <mat-autocomplete autoActiveFirstOption #auto2="matAutocomplete" [displayWith]="profissaoDisplayFn">
-          <mat-option *ngFor="let profissao of profissaoFilteredOptions | async" [value]="profissao">
-            {{profissao.nome}}
-          </mat-option>
-        </mat-autocomplete>
-      </mat-form-field>
-
-      <div>
-        <mat-form-field appearance="outline" style="width: 33%">
-          <mat-label>Qtd. Vidas 0 a 18</mat-label>
-          <input type="number" matInput placeholder="0 a 18"
-                 [(ngModel)]="cotacao.qtdVidas0a18anos">
-        </mat-form-field>
-        <mat-form-field appearance="outline" style="width: 33%">
-          <mat-label>Qtd. Vidas 19 a 23</mat-label>
-          <input type="number" matInput placeholder="19 a 23"
-                 [(ngModel)]="cotacao.qtdVidas19a23anos">
-        </mat-form-field>
-        <mat-form-field appearance="outline" style="width: 33%">
-          <mat-label>Qtd. Vidas 24 a 28</mat-label>
-          <input type="number" matInput placeholder="24 a 28"
-                 [(ngModel)]="cotacao.qtdVidas24a28anos">
-        </mat-form-field>
-      </div>
-      <div>
-        <mat-form-field appearance="outline" style="width: 33%">
-          <mat-label>Qtd. Vidas 29 a 33</mat-label>
-          <input type="number" matInput placeholder="29 a 33"
-                 [(ngModel)]="cotacao.qtdVidas29a33anos">
-        </mat-form-field>
-        <mat-form-field appearance="outline" style="width: 33%">
-          <mat-label>Qtd. Vidas 34 a 38</mat-label>
-          <input type="number" matInput placeholder="34 a 38"
-                 [(ngModel)]="cotacao.qtdVidas34a38anos">
-        </mat-form-field>
-        <mat-form-field appearance="outline" style="width: 33%">
-          <mat-label>Qtd. Vidas 39 a 43</mat-label>
-          <input type="number" matInput placeholder="39 a 43"
-                 [(ngModel)]="cotacao.qtdVidas39a43anos">
-        </mat-form-field>
-      </div>
-      <div>
-        <mat-form-field appearance="outline" style="width: 33%">
-          <mat-label>Qtd. Vidas 44 a 48</mat-label>
-          <input type="number" matInput placeholder="44 a 48"
-                 [(ngModel)]="cotacao.qtdVidas44a48anos">
-        </mat-form-field>
-        <mat-form-field appearance="outline" style="width: 33%">
-          <mat-label>Qtd. Vidas 49 a 53</mat-label>
-          <input type="number" matInput placeholder="49 a 53"
-                 [(ngModel)]="cotacao.qtdVidas49a53anos">
-        </mat-form-field>
-        <mat-form-field appearance="outline" style="width: 33%">
-          <mat-label>Qtd. Vidas 54 a 58</mat-label>
-          <input type="number" matInput placeholder="54 a 58"
-                 [(ngModel)]="cotacao.qtdVidas54a58anos">
-        </mat-form-field>
-      </div>
-      <div>
-        <mat-form-field appearance="outline" style="width: 33%">
-          <mat-label>Qtd. Vidas 59 ou Mais</mat-label>
-          <input type="number" matInput placeholder="59 ou mais"
-                 [(ngModel)]="cotacao.qtdVidas59ouMaisAnos">
+        <mat-form-field appearance="outline" style="width: 100%">
+          <mat-label>Estado</mat-label>
+          <input (ngModelChange)="consultaCotacaoEstado($event)" matInput [formControl]="estadoAutoCompleteControl" [matAutocomplete]="auto1" type="text">
+          <mat-autocomplete autoActiveFirstOption #auto1="matAutocomplete" [displayWith]="estadoDisplayFn">
+            <mat-option *ngFor="let estado of estadoFilteredOptions | async" [value]="estado">
+              {{estado.nome}}
+            </mat-option>
+          </mat-autocomplete>
         </mat-form-field>
 
-        <mat-form-field appearance="outline" style="width: 66%">
-          <mat-label>Acomodacao</mat-label>
-          <mat-select [(ngModel)]="cotacao.acomodacao">
-            <mat-option [value]=""></mat-option>
-            <mat-option *ngFor="let acomodacao of todasAcomodacoes;" [value]="acomodacao">{{acomodacao}}</mat-option>
-          </mat-select>
+        <mat-form-field appearance="outline" style="width: 100%">
+          <mat-label>Profissao</mat-label>
+          <input matInput (ngModelChange)="consultaCotacaoProfissao($event)" [formControl]="profissaoAutoCompleteControl" [matAutocomplete]="auto2" type="text">
+          <mat-autocomplete autoActiveFirstOption #auto2="matAutocomplete" [displayWith]="profissaoDisplayFn">
+            <mat-option *ngFor="let profissao of profissaoFilteredOptions | async" [value]="profissao">
+              {{profissao.nome}}
+            </mat-option>
+          </mat-autocomplete>
         </mat-form-field>
-      </div>
 
+        <div>
+          <mat-form-field appearance="outline" style="width: 33%">
+            <mat-label>Qtd. Vidas 0 a 18</mat-label>
+            <input type="number" matInput placeholder="0 a 18"
+                   [(ngModel)]="filtroCotacao.qtdVidas0a18anos">
+          </mat-form-field>
+          <mat-form-field appearance="outline" style="width: 33%">
+            <mat-label>Qtd. Vidas 19 a 23</mat-label>
+            <input type="number" matInput placeholder="19 a 23"
+                   [(ngModel)]="filtroCotacao.qtdVidas19a23anos">
+          </mat-form-field>
+          <mat-form-field appearance="outline" style="width: 33%">
+            <mat-label>Qtd. Vidas 24 a 28</mat-label>
+            <input type="number" matInput placeholder="24 a 28"
+                   [(ngModel)]="filtroCotacao.qtdVidas24a28anos">
+          </mat-form-field>
+        </div>
+        <div>
+          <mat-form-field appearance="outline" style="width: 33%">
+            <mat-label>Qtd. Vidas 29 a 33</mat-label>
+            <input type="number" matInput placeholder="29 a 33"
+                   [(ngModel)]="filtroCotacao.qtdVidas29a33anos">
+          </mat-form-field>
+          <mat-form-field appearance="outline" style="width: 33%">
+            <mat-label>Qtd. Vidas 34 a 38</mat-label>
+            <input type="number" matInput placeholder="34 a 38"
+                   [(ngModel)]="filtroCotacao.qtdVidas34a38anos">
+          </mat-form-field>
+          <mat-form-field appearance="outline" style="width: 33%">
+            <mat-label>Qtd. Vidas 39 a 43</mat-label>
+            <input type="number" matInput placeholder="39 a 43"
+                   [(ngModel)]="filtroCotacao.qtdVidas39a43anos">
+          </mat-form-field>
+        </div>
+        <div>
+          <mat-form-field appearance="outline" style="width: 33%">
+            <mat-label>Qtd. Vidas 44 a 48</mat-label>
+            <input type="number" matInput placeholder="44 a 48"
+                   [(ngModel)]="filtroCotacao.qtdVidas44a48anos">
+          </mat-form-field>
+          <mat-form-field appearance="outline" style="width: 33%">
+            <mat-label>Qtd. Vidas 49 a 53</mat-label>
+            <input type="number" matInput placeholder="49 a 53"
+                   [(ngModel)]="filtroCotacao.qtdVidas49a53anos">
+          </mat-form-field>
+          <mat-form-field appearance="outline" style="width: 33%">
+            <mat-label>Qtd. Vidas 54 a 58</mat-label>
+            <input type="number" matInput placeholder="54 a 58"
+                   [(ngModel)]="filtroCotacao.qtdVidas54a58anos">
+          </mat-form-field>
+        </div>
+        <div>
+          <mat-form-field appearance="outline" style="width: 33%">
+            <mat-label>Qtd. Vidas 59 ou Mais</mat-label>
+            <input type="number" matInput placeholder="59 ou mais"
+                   [(ngModel)]="filtroCotacao.qtdVidas59ouMaisAnos">
+          </mat-form-field>
 
+          <mat-form-field appearance="outline" style="width: 66%">
+            <mat-label>Acomodacao</mat-label>
+            <mat-select (ngModelChange)="consultaCotacaoAcomodacao($event)" [(ngModel)]="filtroCotacao.acomodacao">
+              <mat-option [value]=""></mat-option>
+              <mat-option *ngFor="let acomodacao of todasAcomodacoes;" [value]="acomodacao">{{acomodacao}}</mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
 
-
-    </mat-card-content>
-  </mat-card>
+      </mat-card-content>
+    </mat-card>
+  </div>
 
 </div>
+
+<div *ngIf="todasOpcoes" style="height: 20px"></div>
+
+<div [hidden]="!todasOpcoes">
+  <mat-card>
+    <mat-card-title>Resultado Consulta</mat-card-title>
+    <br/>
+    <mat-card-content>
+      <mat-table [dataSource]="dataSourceCotacao" matSort class="mat-elevation-z8">
+        <ng-container matColumnDef="id">
+          <mat-header-cell *matHeaderCellDef mat-sort-header>Id</mat-header-cell>
+          <mat-cell *matCellDef="let cotacao" (click)="selecionaCotacao(cotacao)" class="mouse-pointer"> {{cotacao.id}} </mat-cell>
+        </ng-container>
+
+        <ng-container matColumnDef="estado">
+          <mat-header-cell *matHeaderCellDef mat-sort-header> Estado </mat-header-cell>
+          <mat-cell *matCellDef="let cotacao" (click)="selecionaCotacao(cotacao)" class="mouse-pointer"> {{cotacao.tabela.estado.sigla}} </mat-cell>
+        </ng-container>
+
+        <ng-container matColumnDef="nomeTabela">
+          <mat-header-cell *matHeaderCellDef mat-sort-header> Tabela </mat-header-cell>
+          <mat-cell *matCellDef="let cotacao" (click)="selecionaCotacao(cotacao)" class="mouse-pointer"> {{cotacao.tabela.nome}} </mat-cell>
+        </ng-container>
+
+        <ng-container matColumnDef="nomeProduto">
+          <mat-header-cell *matHeaderCellDef mat-sort-header> Produto </mat-header-cell>
+          <mat-cell *matCellDef="let cotacao" (click)="selecionaCotacao(cotacao)" class="mouse-pointer"> {{cotacao.produto.nome}} </mat-cell>
+        </ng-container>
+
+        <ng-container matColumnDef="acomodacao">
+          <mat-header-cell *matHeaderCellDef mat-sort-header> Acomodacao </mat-header-cell>
+          <mat-cell *matCellDef="let cotacao" (click)="selecionaCotacao(cotacao)" class="mouse-pointer"> {{cotacao.acomodacao}} </mat-cell>
+        </ng-container>
+
+        <ng-container matColumnDef="coparticipacao">
+          <mat-header-cell *matHeaderCellDef mat-sort-header> Coparticipacao </mat-header-cell>
+          <mat-cell *matCellDef="let cotacao" (click)="selecionaCotacao(cotacao)" class="mouse-pointer"> {{cotacao.coparticipacao ? 'Com' : 'Sem'}} </mat-cell>
+        </ng-container>
+
+        <ng-container matColumnDef="valor">
+          <mat-header-cell *matHeaderCellDef mat-sort-header> R$ </mat-header-cell>
+          <mat-cell *matCellDef="let cotacao" (click)="selecionaCotacao(cotacao)" class="mouse-pointer"> {{ calculaValorCotacao(cotacao) | currency: 'BRL' }} </mat-cell>
+        </ng-container>
+
+        <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+        <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+      </mat-table>
+      <mat-paginator [pageSizeOptions]="[15, 50, 100]" [length]="dataSourceCotacao.data.length" showFirstLastButtons></mat-paginator>
+    </mat-card-content>
+  </mat-card>
+</div>
+
