--- a/src/app/components/tabela/tabela.component.html
+++ b/src/app/components/tabela/tabela.component.html
@@ -158,17 +158,14 @@
           </div>
 
           <div style="text-align: right">
-            <span>
-              <mat-slide-toggle [(ngModel)]="tabelaEditando.preferencial" [disabled]="!adicionandoTabela() && !editandoTabela()" labelPosition="before">Preferencial</mat-slide-toggle>
-            </span>
-            <span style="padding-left: 25px">
-              <mat-slide-toggle [(ngModel)]="tabelaEditando.pme" [disabled]="!adicionandoTabela() && !editandoTabela()" labelPosition="before">PME</mat-slide-toggle>
-            </span>
-            <span style="padding-left: 25px">
+            <span style="padding-left: 25px" *ngIf="categoriaEmpresarial()">
               <mat-slide-toggle [(ngModel)]="tabelaEditando.contemplaMEI" [disabled]="!adicionandoTabela() && !editandoTabela()" labelPosition="before">MEI</mat-slide-toggle>
             </span>
-            <span style="padding-left: 25px">
+            <span style="padding-left: 25px" *ngIf="categoriaEmpresarial()">
               <mat-slide-toggle [(ngModel)]="tabelaEditando.compulsoria" [disabled]="!adicionandoTabela() && !editandoTabela()" labelPosition="before">Compulsoria</mat-slide-toggle>
+            </span>
+            <span style="padding-left: 25px">
+              <mat-slide-toggle [(ngModel)]="tabelaEditando.preferencial" [disabled]="!adicionandoTabela() && !editandoTabela()" labelPosition="before">Preferencial</mat-slide-toggle>
             </span>
           </div>
 
