tabela de produto com checkboxes de labs e hosps

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -85,7 +85,7 @@
 
     <br/>
 
-    <div>
+    <div class="flex-container">
       <router-outlet></router-outlet>
     </div>
   </mat-sidenav-content>
