--- a/src/app/components/produto/produto.component.html
+++ b/src/app/components/produto/produto.component.html
@@ -93,7 +93,7 @@
           <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
         </mat-table>
       </div>
-      <mat-paginator #paginatorProduto [pageSizeOptions]="[5, 10, 100]" [length]="dataSourceProduto.data.length" showFirstLastButtons></mat-paginator>
+      <mat-paginator #paginatorProduto [pageSizeOptions]="[10, 50, 100]" [length]="dataSourceProduto.data.length" showFirstLastButtons></mat-paginator>
     </mat-card-content>
   </mat-card>
 
@@ -162,6 +162,11 @@
             <mat-label>Reembolso</mat-label>
             <input matInput type="number" placeholder="Reembolso" [disabled]="!adicionandoProduto() && !editandoProduto()"
                    [(ngModel)]="produtoEditando.reembolso">
+          </mat-form-field>
+          <mat-form-field appearance="outline" style="width: 100%">
+            <mat-label>Observacoes</mat-label>
+            <textarea maxlength="100" matInput placeholder="Reembolso" [disabled]="!adicionandoProduto() && !editandoProduto()"
+                      [(ngModel)]="produtoEditando.observacao"></textarea>
           </mat-form-field>
         </mat-card-content>
       </mat-card>
