--- a/src/app/components/operadora/operadora.component.html
+++ b/src/app/components/operadora/operadora.component.html
@@ -27,7 +27,7 @@
 
           <ng-container matColumnDef="cor">
             <mat-header-cell *matHeaderCellDef mat-sort-header> Cor </mat-header-cell>
-            <mat-cell *matCellDef="let operadora" (click)="selecionaOperadora(operadora)" class="mouse-pointer" [style.color]="'#'+ operadora.cor"> {{operadora.cor}} </mat-cell>
+            <mat-cell *matCellDef="let operadora" (click)="selecionaOperadora(operadora)" class="mouse-pointer" [style.color]="operadora.cor"> {{operadora.cor}} </mat-cell>
           </ng-container>
 
           <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
@@ -79,8 +79,9 @@
           </mat-form-field>
           <mat-form-field appearance="outline" style="width: 100%">
             <mat-label>Cor</mat-label>
-            <input matInput placeholder="Cor" [disabled]="!adicionandoOperadora() && !editandoOperadora()"
-                   [(ngModel)]="operadoraEditando.cor">
+            <input matInput placeholder="Cor" [(ngModel)]="operadoraEditando.cor" [(colorPicker)]="operadoraEditando.cor"
+                   [disabled]="!adicionandoOperadora() && !editandoOperadora()"
+                   [style.color]="operadoraEditando.cor"/>
           </mat-form-field>
         </mat-card-content>
       </mat-card>
