--- a/src/app/components/produto/produto.component.html
+++ b/src/app/components/produto/produto.component.html
@@ -76,7 +76,12 @@
           </ng-container>
 
           <ng-container [matColumnDef]="laboratorio.nome" *ngFor="let laboratorio of todosLaboratorios" >
-            <mat-header-cell *matHeaderCellDef mat-sort-header> {{laboratorio.nome}} </mat-header-cell>
+            <mat-header-cell *matHeaderCellDef mat-sort-header>
+              <div style="flex-direction: column">
+                <div>{{laboratorio.local}}</div>
+                <div>{{laboratorio.nome}}</div>
+              </div>
+            </mat-header-cell>
             <mat-cell *matCellDef="let produto" (click)="selecionaProduto(produto)" class="mouse-pointer">
               <mat-checkbox [disabled]="true" [ngModel]="verificaSeLaboratorioSelecionado(produto, laboratorio)"></mat-checkbox>
             </mat-cell>
@@ -89,7 +94,12 @@
             </mat-cell>
 
           <ng-container [matColumnDef]="hospital.nome" *ngFor="let hospital of todosHospitais" >
-            <mat-header-cell *matHeaderCellDef mat-sort-header> {{hospital.nome}} </mat-header-cell>
+            <mat-header-cell *matHeaderCellDef mat-sort-header>
+              <div style="flex-direction: column">
+                <div>{{hospital.local}}</div>
+                <div>{{hospital.nome}}</div>
+              </div>
+            </mat-header-cell>
             <mat-cell *matCellDef="let produto" (click)="selecionaProduto(produto)" class="mouse-pointer">
               <mat-checkbox [disabled]="true" [ngModel]="verificaSeHospitalSelecionado(produto, hospital)"></mat-checkbox>
             </mat-cell>
