fix class produto.component.html

--- a/src/app/components/produto/produto.component.html
+++ b/src/app/components/produto/produto.component.html
@@ -13,7 +13,7 @@
     <br/>
 
     <mat-card-content>
-      <div [style.width]="this.produtoSelecionado ? (window.innerWidth * 0.70) + 'px' : (window.innerWidth * 0.95) + 'px'" style="overflow: auto;" class="mat-elevation-z8">
+      <div [style.width]="this.produtoSelecionado ? (window.innerWidth * 0.70) + 'px' : (window.innerWidth * 0.95) + 'px'" style="overflow: auto;">
         <mat-table style="width: 3000px" #sortProduto="matSort" [dataSource]="dataSourceProduto" matSort>
           <ng-container matColumnDef="id">
             <mat-header-cell *matHeaderCellDef mat-sort-header> Id </mat-header-cell>
